--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
-<img src="https://tax-service-30j7jrhwl-stefans-projects-8df6f421.vercel.app/api/getTax?countryCode=SK"/>
+<img src="http://localhost:3000/api/getTax?countryCode=SK"/>
 
 </body>
 </html>
